--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
   <header>
     <div class="menu">
       <ul class="menu__item">
-        <li><a href="">HOME</a></li>
+        <li><a href="#index">HOME</a></li>
         <li>
-          <a href="">ABOUT</a>
+          <a href="#">ABOUT</a>
           <div class="submenu">
             <ul>
               <li><a href="">AGENCY</a></li>
@@ -26,20 +26,20 @@
             </ul>
           </div>
         </li>
-        <li><a href="">GALLERY</a></li>
+        <li><a href="#gallery">GALLERY</a></li>
         <li class="logo">
 
           <h1>JOURNEY</h1>
 
         </li>
         <li>
-          <a href="#">TOURS</a>
+          <a href="#tours">TOURS</a>
         </li>
         <li>
           <a href="#">BLOG</a>
         </li>
         <li>
-          <a href="#">CONTACS</a>
+          <a href="#contacs">CONTACS</a>
         </li>
       </ul>
     </div>
