--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="menu__item">
         <li><a href="#">HOME</a></li>
         <li>
-          <a href="#about.html">ABOUT</a>
+          <a href="about.html">ABOUT</a>
           <div class="submenu">
             <ul>
               <li><a href="">AGENCY</a></li>
@@ -27,20 +27,20 @@
             </ul>
           </div>
         </li>
-        <li><a href="#gallery.html">GALLERY</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
         <li class="logo">
 
           <h1>JOURNEY</h1>
 
         </li>
         <li>
-          <a href="#tours.html">TOURS</a>
+          <a href="tours.html">TOURS</a>
         </li>
         <li>
           <a href="#">BLOG</a>
         </li>
         <li>
-          <a href="#contacs.html">CONTACS</a>
+          <a href="contacs.html">CONTACS</a>
         </li>
       </ul>
     </div>
