--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header id="top">
     <div class="menu">
       <ul class="menu__item">
-        <li><a href="#">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li>
           <a href="about.html">ABOUT</a>
           <div class="submenu">
