--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
     <header id="top">
       <div class="menu">
         <ul class="menu__item">
-          <li><a href="">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li>
-            <a href="" class="about">ABOUT</a>
+            <a href="about.html" class="about">ABOUT</a>
             <div class="submenu">
               <ul>
                 <li><a href="">AGENCY</a></li>
@@ -28,18 +28,18 @@
               </ul>
             </div>
           </li>
-          <li><a href="">GALLERY</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
           <li class="logo">
             <h1>JOURNEY</h1>
           </li>
           <li>
-            <a href="#" class="tours">TOURS</a>
+            <a href="tours.html" class="tours">TOURS</a>
           </li>
           <li>
             <a href="#" class="blog">BLOG</a>
           </li>
           <li>
-            <a href="#" class="contacs">CONTACS</a>
+            <a href="contacs.html" class="contacs">CONTACS</a>
           </li>
         </ul>
       </div>
