--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <header>
     <div class="menu">
       <ul class="menu__item">
-        <li><a href="#index">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li>
           <a href="#">ABOUT</a>
           <div class="submenu">
@@ -26,20 +26,20 @@
             </ul>
           </div>
         </li>
-        <li><a href="#gallery">GALLERY</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
         <li class="logo">
 
           <h1>JOURNEY</h1>
 
         </li>
         <li>
-          <a href="#tours">TOURS</a>
+          <a href="tours.html">TOURS</a>
         </li>
         <li>
           <a href="#">BLOG</a>
         </li>
         <li>
-          <a href="#contacs">CONTACS</a>
+          <a href="contacs.html">CONTACS</a>
         </li>
       </ul>
     </div>
