--- a/contacs.html
+++ b/contacs.html
@@ -16,9 +16,9 @@
   <header id="top">
     <nav class="menu">
       <ul class="menu__item">
-        <li><a href="">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li>
-          <a href="">ABOUT</a>
+          <a href="about.html">ABOUT</a>
           <div class="submenu">
             <ul>
               <li><a href="">AGENCY</a></li>
@@ -27,18 +27,18 @@
             </ul>
           </div>
         </li>
-        <li><a href="">GALLERY</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
         <li class="logo">
           <h1>JOURNEY</h1>
         </li>
         <li>
-          <a href="#">TOURS</a>
+          <a href="tours.html">TOURS</a>
         </li>
         <li>
           <a href="#">BLOG</a>
         </li>
         <li>
-          <a href="#">CONTACS</a>
+          <a href="contacs.html">CONTACS</a>
         </li>
       </ul>
     </nav>
